--- a/layouts/partials/head/links.html
+++ b/layouts/partials/head/links.html
@@ -2,9 +2,7 @@
 <link rel="apple-touch-icon" href="{{.Site.BaseURL}}images/apple-touch-icon.png" />
 <link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/screen.css" />
 <link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/nav.css" />
-<link rel="stylesheet" type="text/css"
-      href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400|Inconsolata"
-/>
+<link href="https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat" rel="stylesheet">
 
 {{if .Site.Params.RSSLink}}
 <link href="{{.Site.Params.RSSLink}}" rel="alternate"
