--- a/layouts/partials/head/links.html
+++ b/layouts/partials/head/links.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/screen.css" />
 <link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/nav.css" />
 <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat" rel="stylesheet">
+<link href="//cdnjs.cloudflare.com/ajax/libs/cc-icons/1.2.1/css/cc-icons.min.css" rel="stylesheet">
 
 {{if .Site.Params.RSSLink}}
 <link href="{{.Site.Params.RSSLink}}" rel="alternate"
