--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -18,7 +18,7 @@
         <header class="post-header">
           <h1 class="post-title">{{.Title}}</h1>
           <small>{{.Description}}</small>
-
+          {{partial "post_categories.html" .}}
           {{partial "post_meta.html" .}}
 
         </header>
