--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -6,11 +6,11 @@
 
     0.  Normalize
     1.  Icons
-    2.  General
+    2.  Base
     3.  Utilities
     4.  General
     5.  Single Post
-    6.  Tag Archive
+    6.  Author Profile
     7.  Third Party Elements
     8.  Pagination
     9.  Footer
@@ -183,7 +183,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 
 /* ==========================================================================
-   2. General - Setting up some base styles
+   2. Base - Setting up some base styles
    ========================================================================== */
 
 html {
