--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,6 @@
 <footer class="site-footer">
   <section class="copyright">
-    <p>Subversive Metadata content is licensed <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><i class="cc cc-by"></i>CC-BY</a> by its authors.</p>
-    <p>The header image is licensed <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><i class="cc cc-by"></i>CC-BY</a> from the University of Michigan Libraries.</p>
+    <p>Subversive Metadata content is licensed <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><i class="cc cc-by"></i>CC-BY</a> by its authors. The header image is licensed <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><i class="cc cc-by"></i>CC-BY</a> from the University of Michigan Libraries. Subversive Metadata was developed in part by a grant (<a href="https://www.moore.org/grant-detail?grantId=GBMF4552.01">GBMF 4552</a>) from the Gordon and Betty Moore Foundation.</p>
   </section>
 
   {{if ne .Site.Params.hideHUGOSupport true}}
