move author list template

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -12,7 +12,7 @@
     <main id="content" class="content" role="main">
 
       <article class="post">
-        <h1>Nope, that page doesn't exist</h1>
+        <h1>That page doesn't exist</h1>
         <p>
           You may have mis-typed the URL, please give it another shot. Or, you
           might have better luck heading back to the <a href="/">homepage</a>.
