--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -26,7 +26,9 @@
     {{$author}}
   {{end}}
 
+  {{if ne .Date.Year 1}}
   <time class="post-date" datetime="{{.Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML}}">
     {{.Date.Format "2 Jan 2006"}}
   </time>
+  {{end}}
 </section>
