--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -11,7 +11,7 @@
 
   <div class="site-wrapper">
 
-    {{partial "covers/post.html" .}}
+    {{partial "covers/paging.html" .}}
 
     <main class="content" role="main">
       <article class="post {{ .Section }}">
