add hypothesis, rebrand

--- a/layouts/partials/head/links.html
+++ b/layouts/partials/head/links.html
@@ -37,6 +37,8 @@
 </script>
 {{end}}
 
+<script src="https://hypothes.is/embed.js" async></script>
+
 {{with .Site.Params.highlightjsTheme}}
 <link rel="stylesheet" href="/css/highlightjs/{{.}}.css">
 <script src="/js/highlight.pack.js"></script>
