--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -1,10 +1,10 @@
-{{$author := or .Params.author .Site.Params.author}}
+{{$author := or .Params.editor .Site.Params.editor}}
 {{if $author}}
   {{$authorDetail := index .Site.Author $author}}
 
   {{if $authorDetail.thumbnail}}
   <figure class="author-image">
-    <a class="img" href="/author/{{$authorDetail.id}}" style="background-image: url({{$authorDetail.thumbnail}})">
+    <a class="img" href="/editor/{{$author}}" style="background-image: url({{$authorDetail.thumbnail}})">
       <span class="hidden">Author's Picture</span>
     </a>
   </figure>
@@ -17,7 +17,7 @@
   {{end}}
 
   <section class="author">
-    <h4><a href="/author/{{$authorDetail.id}}">{{$authorDetail.firstName}} {{$authorDetail.lastName}}</a></h4>
+    <h4><a href="/editor/{{$author}}">{{$authorDetail.firstName}} {{$authorDetail.lastName}}</a></h4>
 
     {{if $authorDetail.bio}}
     <p>{{$authorDetail.bio}}</p>
