open hypo by default on posts

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -4,6 +4,13 @@
 <html lang="{{.Site.LanguageCode}}">
 <head>
   {{partial "head/includes.html" .}}
+
+  <script type="application/json" class="js-hypothesis-config">
+  {
+      "openSidebar": true,
+      "theme": "clean"
+  }
+  </script>
 </head>
 <body class="nav-closed">
 
