--- a/layouts/partials/head/links.html
+++ b/layouts/partials/head/links.html
@@ -37,7 +37,7 @@
 </script>
 {{end}}
 
-<script src="https://hypothes.is/embed.js" async></script>
+<script async src="https://hypothes.is/embed.js"></script>
 
 {{with .Site.Params.highlightjsTheme}}
 <link rel="stylesheet" href="/css/highlightjs/{{.}}.css">
