--- a/layouts/partials/head/links.html
+++ b/layouts/partials/head/links.html
@@ -38,6 +38,7 @@
 {{end}}
 
 <script async src="https://hypothes.is/embed.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
 {{with .Site.Params.highlightjsTheme}}
 <link rel="stylesheet" href="/css/highlightjs/{{.}}.css">
